fix: deployment issues and server ip on swagger